--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cycler==0.12.1
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
 fonttools==4.57.0
+git-filter-repo==2.47.0
 google-auth==2.40.0
 google-auth-oauthlib==1.2.2
 greenlet==3.2.1
